--- a/config.yml
+++ b/config.yml
@@ -7,97 +7,36 @@ recipe: default.v1
 language: en
 
 pipeline:
-  - name: "SpacyNLP"
+  - name: SpacyNLP
   # language model to load
     model: "en_core_web_lg"
-
-    # when retrieving word vectors, this will decide if the casing
-    # of the word is relevant. E.g. `hello` and `Hello` will
-    # retrieve the same vector, if set to `False`. For some
-    # applications and models it makes sense to differentiate
-    # between these two words, therefore setting this to `True`.
-    case_sensitive: False
-
-  - name: "SpacyTokenizer"
-    # Flag to check whether to split intents
-    "intent_tokenization_flag": False
-    # Symbol on which intent should be split
-    "intent_split_symbol": "_"
-    # Regular expression to detect tokens
-    "token_pattern": None
-
-  - name: "SpacyFeaturizer"
-    # Specify what pooling operation should be used to calculate the vector of
-    # the complete utterance. Available options: 'mean' and 'max'.
-    "pooling": "mean"
-
-
-
-
-# # No configuration for the NLU pipeline was provided. The following default pipeline was used to train your model.
-# # If you'd like to customize it, uncomment and adjust the pipeline.
-# # See https://rasa.com/docs/rasa/tuning-your-model for more information.
-
-  # - name: "SpacyTokenizer"
-  #   # Flag to check whether to split intents
-  #   "intent_tokenization_flag": False
-  #   # Symbol on which intent should be split
-  #   "intent_split_symbol": "_"
-  #   # Regular expression to detect tokens
-  #   "token_pattern": None
-
-  # - name: "SpacyNLP"
-  #   # language model to load
-  #   model: "en_core_web_lg"
-
-  #   # when retrieving word vectors, this will decide if the casing
-  #   # of the word is relevant. E.g. `hello` and `Hello` will
-  #   # retrieve the same vector, if set to `False`. For some
-  #   # applications and models it makes sense to differentiate
-  #   # between these two words, therefore setting this to `True`.
-  #   case_sensitive: False
-
-  # - name: "WhitespaceTokenizer"
-  #   intent_tokenization_flag: True
-  #   intent_split_symbol: "+"
-  # - name: "CountVectorsFeaturizer"
-  # - name: "DIETClassifier"
-
-
-  # - name: bert-base-uncased
-  #   model_name: "bert"
-
-
-  # - name: RegexFeaturizer
-  # - name: LexicalSyntacticFeaturizer
-  # - name: CountVectorsFeaturizer
-  # - name: CountVectorsFeaturizer
-  #   analyzer: char_wb
-  #   min_ngram: 1
-  #   max_ngram: 4
-  # - name: DIETClassifier
-  #   epochs: 100
-  #   constrain_similarities: true
-  # - name: EntitySynonymMapper
-  # - name: ResponseSelector
-  #   epochs: 100
-  #   constrain_similarities: true
-  # - name: FallbackClassifier
-  #   threshold: 0.3
-  #   ambiguity_threshold: 0.1
-
+  - name: SpacyTokenizer
+  - name: SpacyFeaturizer
+  - name: RegexFeaturizer
+  - name: LexicalSyntacticFeaturizer
+  - name: CountVectorsFeaturizer
+  - name: CountVectorsFeaturizer
+    analyzer: "char_wb"
+    min_ngram: 1
+    max_ngram: 4
+  - name: DIETClassifier
+    epochs: 100
+  - name: EntitySynonymMapper
+  - name: ResponseSelector
+    epochs: 100
+    
 # Configuration for Rasa Core.
 # https://rasa.com/docs/rasa/core/policies/
 policies:
-# # No configuration for policies was provided. The following default policies were used to train your model.
-# # If you'd like to customize them, uncomment and adjust the policies.
-# # See https://rasa.com/docs/rasa/policies for more information.
-#   - name: MemoizationPolicy
-#   - name: RulePolicy
-#   - name: UnexpecTEDIntentPolicy
-#     max_history: 5
-#     epochs: 100
-#   - name: TEDPolicy
-#     max_history: 5
-#     epochs: 100
-#     constrain_similarities: true
+# No configuration for policies was provided. The following default policies were used to train your model.
+# If you'd like to customize them, uncomment and adjust the policies.
+# See https://rasa.com/docs/rasa/policies for more information.
+  - name: MemoizationPolicy
+  - name: RulePolicy
+  - name: UnexpecTEDIntentPolicy
+    max_history: 5
+    epochs: 100
+  - name: TEDPolicy
+    max_history: 5
+    epochs: 100
+    constrain_similarities: true
