--- a/config.yml
+++ b/config.yml
@@ -8,10 +8,8 @@ language: en
 
 pipeline:
   - name: SpacyNLP
-  # language model to load
     model: "en_core_web_lg"
-  - name: SpacyTokenizer
-  - name: SpacyFeaturizer
+  - name: WhitespaceTokenizer
   - name: RegexFeaturizer
   - name: LexicalSyntacticFeaturizer
   - name: CountVectorsFeaturizer
@@ -20,11 +18,26 @@ pipeline:
     min_ngram: 1
     max_ngram: 4
   - name: DIETClassifier
-    epochs: 100
   - name: EntitySynonymMapper
   - name: ResponseSelector
-    epochs: 100
-    
+  # - name: SpacyNLP
+  # # language model to load
+  #   model: "en_core_web_lg"
+  # - name: SpacyTokenizer
+  # - name: SpacyFeaturizer
+  # - name: RegexFeaturizer
+  # - name: LexicalSyntacticFeaturizer
+  # - name: CountVectorsFeaturizer
+  # - name: CountVectorsFeaturizer
+  #   analyzer: "char_wb"
+  #   min_ngram: 1
+  #   max_ngram: 4
+  # - name: DIETClassifier
+  #   epochs: 100
+  # - name: EntitySynonymMapper
+  # - name: ResponseSelector
+  #   epochs: 100
+
 # Configuration for Rasa Core.
 # https://rasa.com/docs/rasa/core/policies/
 policies:
