--- a/domain.yml
+++ b/domain.yml
@@ -33,6 +33,9 @@ responses:
   utter_support:
     - text: "How can I help you?"
 
+  utter_marek:
+    - text: Penis.
+
 session_config:
   session_expiration_time: 60
   carry_over_slots_to_new_session: true
