--- a/config.yml
+++ b/config.yml
@@ -13,24 +13,24 @@ pipeline:
   - name: SpacyFeaturizer
   - name: RegexFeaturizer
   - name: LexicalSyntacticFeaturizer
-  - name: CountVectorsFeaturizer
+  # - name: CountVectorsFeaturizer
   - name: CountVectorsFeaturizer
     analyzer: "char_wb"
     min_ngram: 1
     max_ngram: 4
   - name: DIETClassifier
-    epochs: 10
+    epochs: 40
   - name: EntitySynonymMapper
   - name: ResponseSelector
-    epochs: 10
+    epochs: 40
 
 policies:
   - name: MemoizationPolicy
   - name: RulePolicy
   - name: UnexpecTEDIntentPolicy
     max_history: 5
-    epochs: 10
+    epochs: 40
   - name: TEDPolicy
     max_history: 5
-    epochs: 10
+    epochs: 40
     constrain_similarities: true
