--- a/config.yml
+++ b/config.yml
@@ -8,7 +8,7 @@ language: "en"  # your two-letter language code
 
 pipeline:
   - name: SpacyNLP
-    model: en_core_web_md
+    model: en_core_web_lg
   - name: SpacyTokenizer
   - name: SpacyFeaturizer
   - name: RegexFeaturizer
@@ -19,18 +19,20 @@ pipeline:
     min_ngram: 1
     max_ngram: 4
   - name: DIETClassifier
-    epochs: 40
+    epochs: 100
   - name: EntitySynonymMapper
   - name: ResponseSelector
-    epochs: 40
+    epochs: 100
+  - name: FallbackClassifier
+    threshold: 0.075
 
 policies:
   - name: MemoizationPolicy
   - name: RulePolicy
   - name: UnexpecTEDIntentPolicy
     max_history: 5
-    epochs: 40
+    epochs: 100
   - name: TEDPolicy
     max_history: 5
-    epochs: 40
+    epochs: 100
     constrain_similarities: true
