--- a/config.yml
+++ b/config.yml
@@ -21,8 +21,14 @@ pipeline:
   - name: DIETClassifier
     epochs: 100
   - name: EntitySynonymMapper
+
   - name: ResponseSelector
     epochs: 100
+    retrieval_intent: vse
+
+  - name: ResponseSelector
+    epochs: 100
+    retrieval_intent: chitchat
   - name: FallbackClassifier
     threshold: 0.075
 
@@ -36,4 +42,3 @@ policies:
     max_history: 5
     epochs: 100
     constrain_similarities: true
-  
