--- a/config.yml
+++ b/config.yml
@@ -19,16 +19,12 @@ pipeline:
     min_ngram: 1
     max_ngram: 4
   - name: DIETClassifier
-    epochs: 20
+    epochs: 100
   - name: EntitySynonymMapper
   - name: ResponseSelector
-    epochs: 20
-    retrieval_intent: vse
-  - name: ResponseSelector
-    epochs: 20
-    retrieval_intent: chitchat
-#  - name: FallbackClassifier
-#    threshold: 0.075
+    epochs: 100
+  - name: FallbackClassifier
+    threshold: 0.075
 
 policies:
   - name: MemoizationPolicy
@@ -40,3 +36,4 @@ policies:
     max_history: 5
     epochs: 100
     constrain_similarities: true
+  
